Implementation of taskset service.
Update of minion gateway and its integration tests in progress.

Signed-off-by: Łukasz Dywicki <luke@code-house.org>